# AURA-POC

./: .env.example  .gitignore  CLAUDE.md  README.md  openapi.yaml  plan.md  pyproject.toml  requirements.txt  spec.md  tasks.md
.github/: pull_request_template.md
app/: __init__.py  bearer_auth.py  deps.py  errors.py  exceptions.py  logging.py  main.py  middleware.py  settings.py
app/core/: __init__.py  template_registry.py
app/routers/: __init__.py  health.py  scaffold.py  scaffold_routes.py  templates.py
app/schemas/: __init__.py  agent_input.py  errors.py  exception_schema.py  scaffold.py  scaffold_schema.py
app/services/: __init__.py  github_auth.py  scaffold_pipeline.py
gcp-agent/: template.yaml
gcp-agent-api/skeleton/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
gcp-agent-api/skeleton/src/: main_fastapi.py
gcp-agent-api/skeleton/src/routers/: agent.py  fined_tuned_models.py
gcp-agent-api/skeleton/tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_agent_router.py  test_log_helper.py  test_main_fastapi.py
gcp-agent-clientapp/: template.yaml
gcp-agent-clientapp/skeleton/: README.md  catalog-info.yaml  cloudbuild.yaml  pyproject.toml
gcp-agent-clientapp/skeleton/config/: configuration.json
gcp-agent-clientapp/skeleton/src/: __init__.py  agent_client.py  sample_client_app.py
gcp-agent-clientapp/skeleton/src/config/: config.py
gcp-agent-clientapp/skeleton/src/utils/: log_helper.py
gcp-agent-clientapp/skeleton/tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_agent_client.py  test_config_reader.py  test_log_helper.py
gcp-agent/skeleton/: catalog-info.yaml  cloudbuild.yaml  mkdocs.yaml  pyproject.toml  pytest.ini
gcp-agent/skeleton/config/: agents-config.json  configuration.json
gcp-agent/skeleton/docs/: index.md  openapi.json
gcp-agent/skeleton/src/: agent.py  agent_engine_deploy.py  data_create.py  data_update.py  load_mcp_tools.py  load_rag_corpora.py
gcp-agent/skeleton/tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_agent.py  test_data_create.py  test_data_update.py  test_load_mcp_tools.py  (+1 more)
gcp-agent/skeleton_agent_config/: agent_configuration.json
gcp-agent/skeleton_rag_config/: rag_configuration.json
gcp-agent/skeleton_tools_config/: tools_configuration.json
gcp-multiagent-orchestrator-new-agents/: template.yaml
gcp-multiagent-orchestrator-new-agents/skeleton/: catalog-info.yaml  cloudbuild.yaml  mkdocs.yml  pyproject.toml
gcp-multiagent-orchestrator-new-agents/skeleton/config/: agents.json  root-agent-config.yaml
gcp-multiagent-orchestrator-new-agents/skeleton/docs/: index.md
gcp-multiagent-orchestrator-new-agents/skeleton/src/: agent_deploy.py  main.py
gcp-multiagent-orchestrator-new-agents/skeleton/src/config/: agent_config_generator.py  config.py
gcp-multiagent-orchestrator-new-agents/skeleton/src/root_agent/: agent.py  multi_agent_builder.py
gcp-multiagent-orchestrator-new-agents/skeleton/src/root_agent/sub_agents/: llm_agent.py  loop_agent.py  sequential_agent.py
gcp-multiagent-orchestrator-new-agents/skeleton/src/root_agent/tools/: mcp_client.py  tools_builder.py
gcp-multiagent-orchestrator-new-agents/skeleton/src/utils/: log_helper.py
gcp-multiagent-orchestrator-new-agents/skeleton/tests/: README.md  __init__.py  conftest.py  test_agent_config_generator.py  test_agent_deploy.py  test_config_reader.py  test_log_helper.py
gcp-multiagent-workflow-new-agents/: template.yaml
gcp-multiagent-workflow-new-agents/skeleton/: catalog-info.yaml  cloudbuild.yaml  pyproject.toml  requirements.txt
gcp-rag-dataflow-pipeline/: Dockerfile  README.md  cloudbuild.yaml  pytest.ini  setup.py  template_metadata.json
gcp-rag-dataflow-pipeline/src/: eventfile_rag.json  main.py  requirements.txt  sample_config.json
gcp-rag-dataflow-pipeline/tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_config.py  test_config_validation.py  test_event_arc_trigger.py  test_gcs_data_source.py  test_gcs_event_processor.py  test_gcs_event_processor_extended.py  test_instructions.py  test_jira_data_source.py  test_main.py  test_rag_engine.py  test_rag_managed_db.py  test_rag_pipeline_config.py  test_rag_pipeline_template.py  test_rag_pipeline_template_extended.py  test_rag_pipeline_utils.py  test_run_agent.py  test_summarizer_agent.py  test_summary_document_processor.py  test_vector_db.py  test_vectorsearch.py  test_webhook_notifier.py  test_webhook_notifier_extended.py
inputs/: agent_input.json  it_helpdesk_agent.json  it_infra_monitoring_agent.json  multiagentOrch_standard.json
tests/: conftest.py  test_cors.py  test_errors.py  test_github_auth.py  test_health.py  test_layering.py  test_logging.py  test_no_secrets.py  test_scaffold.py  test_scaffold_pipeline.py  test_template_registry.py  test_templates.py
(+64 files in other folders)
