[project]
name = "aura-orchestrator"
version = "0.1.0"
description = "AURA-POC — AI Component Scaffolding Service."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "PyJWT[crypto]==2.8.0",
    "requests==2.31.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "schemathesis>=3.36",
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "inputs*"]

# ---- ruff ----
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "A", "C4", "PIE", "SIM", "PTH", "RUF"]
ignore = [
    "E501",   # line-length handled by formatter
    "B008",   # Depends() in FastAPI defaults is idiomatic and required
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S107", "B017"]  # asserts, dummy creds, broad raises fine in tests

# ---- mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["jwt.*", "yaml.*", "requests", "requests.*"]
ignore_missing_imports = true

# ---- pytest ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

# ---- coverage ----
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
