
[project]
name = "gcp-agent-api"
version = "0.1.0"
description = "GCP agent api"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.118.0",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    # Environment and configuration
    "python-dotenv",
    "aiohttp>=3.12.15",
    # HTTP requests
    "requests>=2.32.5",
    "ipykernel>=6.30.1",
    # Google Cloud Platform
    "google-cloud-aiplatform[adk,agent_engines]==1.141.0",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=2.18.2",
    # Arize Phoenix Observability
    "arize==7.47.0",
    "arize-otel==0.9.0",
    "arize-phoenix==11.6.2",
    "arize-phoenix-client==1.12.0",
    "arize-phoenix-evals==0.22.0",
    "arize-phoenix-otel==0.12.1",
    # OpenTelemetry and Instrumentation
    "openinference-instrumentation-vertexai>=0.1.11",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-sdk==1.37.0",
    # GraphQL for Arize API
    "gql==3.5.3",
]

[tool.setuptools]
package-dir = {"" = "src"}