
[project]
name = "gcp_vertexai_agent"
version = "0.1.0"
description = "A GCP Vertex AI Agent Client Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "aiohttp>=3.12.15",
    "asyncio>=3.4.3",
    "jsonref>=1.1.0",
    "streamlit>=1.52.1",
    "requests>=2.32.5",
    "google-cloud-aiplatform==1.141.0",
    "google-cloud-aiplatform[agent_engines,adk,ag2]==1.141.0",
    "langchain-google-vertexai>=3.0.3",
    "PyYAML>=6.0.3",
    "google-adk>=1.18.0",
    "google-cloud-storage>=2.18.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
