[project]
name = "gcp-agent"
version = "0.1.0"
description = "GCP ADK Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "arize==7.47.0",
    "arize-otel==0.9.0",
    "arize-phoenix==11.6.2",
    "arize-phoenix-client==1.12.0",
    "arize-phoenix-evals==0.22.0",
    "arize-phoenix-otel==0.12.1",
    "asyncio>=3.4.3",
    "deepeval>=3.7.4",
    "google-adk>=1.27.0",
    "google-cloud-aiplatform>=1.141.0",
    "google-cloud-aiplatform[agent_engines,adk]>=1.141.0",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=2.18.2",
    "gql==3.5.3",
    "langchain-google-vertexai>=3.0.3",
    "openinference-instrumentation-google-adk>=0.1.8",
    "openinference-instrumentation-vertexai>=0.1.11",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-instrumentation-openai-v2>=2.3b0",
    "opentelemetry-sdk==1.37.0",
    "pandas==2.2.3",
    "python-dotenv>=1.1.1",
    "PyYAML>=6.0.3",
    "ragas>=0.3.8",
    "requests>=2.32.5",
    "google-api-core==2.19.1",

]

[tool.setuptools]
package-dir = {"" = "src"}
